<resources>
    <string name="app_name">Calculator</string>

    <!-- Display -->
    <string name="result_value">0</string>

    <!-- Button Labels -->
    <string name="button_clear">AC</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">*</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_add">+</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_subtract">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_equal">=</string>
    <string name="button_0">0</string>
    <string name="button_decimal">.</string>
    <string name="button_percent">%</string>

    <!-- Content Descriptions for Accessibility -->
    <string name="cd_result_display">Calculation result display</string>
    <string name="cd_clear">Clear entry or all clear</string>
    <string name="cd_divide">Divide</string>
    <string name="cd_multiply">Multiply</string>
    <string name="cd_7">Seven</string>
    <string name="cd_8">Eight</string>
    <string name="cd_9">Nine</string>
    <string name="cd_add">Add</string>
    <string name="cd_4">Four</string>
    <string name="cd_5">Five</string>
    <string name="cd_6">Six</string>
    <string name="cd_subtract">Subtract</string>
    <string name="cd_1">One</string>
    <string name="cd_2">Two</string>
    <string name="cd_3">Three</string>
    <string name="cd_equals">Equals</string>
    <string name="cd_0">Zero</string>
    <string name="cd_decimal">Decimal point</string>
    <string name="cd_percent">Percent</string>
</resources>
